GUI changes to EnterResults.fxml

--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/style.css
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/style.css
@@ -69,3 +69,11 @@
     -fx-text-fill: darkblue;
     -fx-opacity: 1;
 }
+
+.resultInput{
+    -fx-border-color:lightgray;
+    -fx-font-size:30pt;
+}
+.incrementButtons{
+    -fx-border-width: 0pt;
+}
