--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/EnterResults.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/EnterResults.fxml
@@ -2,11 +2,12 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" style="-fx-background-color: lightgray;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.EnterResultsController">
+<AnchorPane fx:id="anchorPane" maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" style="-fx-background-color: lightgray;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.EnterResultsController">
     <children>
         <BorderPane prefHeight="540.0" prefWidth="960.0" stylesheets="@style.css">
             <top>
@@ -36,9 +37,9 @@
                 </VBox>
             </top>
          <center>
-            <SplitPane dividerPositions="0.8416149068322981" maxHeight="485.0" maxWidth="930.0" orientation="VERTICAL" prefHeight="300.0" prefWidth="800.0" BorderPane.alignment="CENTER">
-              <items>
-                <AnchorPane maxWidth="930.0" minHeight="0.0" minWidth="0.0" prefHeight="358.0" prefWidth="898.0">
+            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+               <children>
+                <AnchorPane maxWidth="930.0" minHeight="0.0" minWidth="0.0" prefHeight="431.0" prefWidth="930.0" style="-fx-border-color: lightgray;">
                      <children>
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e4e4e480" height="88.0" layoutX="8.0" layoutY="308.0" stroke="#c3c1c1" strokeType="INSIDE" width="910.0" />
                         <DatePicker fx:id="dateField" layoutX="33.0" layoutY="350.0" prefHeight="35.0" prefWidth="250.0" promptText="YYYY-MM-DD" />
@@ -59,23 +60,40 @@
                               <Font size="20.0" />
                            </font>
                         </Text>
-                        <SplitPane dividerPositions="0.5" layoutX="8.0" layoutY="11.0" prefHeight="294.0" prefWidth="910.0">
+                        <SplitPane dividerPositions="0.49757815940114486" layoutX="8.0" layoutY="11.0" prefHeight="294.0" prefWidth="910.0">
                           <items>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="292.0" prefWidth="450.0">
                                  <children>
-                                    <TextField fx:id="resultInputField1" alignment="CENTER" layoutX="25.0" layoutY="120.0" prefHeight="150.0" prefWidth="280.0" style="-fx-border-color: gray;">
+                                    <TextField fx:id="resultInputField1" alignment="CENTER" layoutX="25.0" layoutY="120.0" prefHeight="150.0" prefWidth="280.0" style="-fx-border-color: lightgray;" styleClass="resultInput">
                                        <font>
                                           <Font size="70.0" />
-                                       </font></TextField>
-                                    <Button layoutX="330.0" layoutY="140.0" mnemonicParsing="false" onAction="#incrementTeam1PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: green;" text="+1">
+                                       </font>
+                                    </TextField>
+                                    <Button layoutX="330.0" layoutY="140.0" mnemonicParsing="false" onAction="#incrementTeam1PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: white;" styleClass="incrementButtons">
                                        <font>
                                           <Font size="20.0" />
-                                       </font></Button>
-                                    <Button layoutX="330.0" layoutY="200.0" mnemonicParsing="false" onAction="#decrementTeam1PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: red;" text="-1">
+                                       </font>
+                                       <graphic>
+                                          <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@icons/plus.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                    </Button>
+                                    <Button layoutX="330.0" layoutY="200.0" mnemonicParsing="false" onAction="#decrementTeam1PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: red;" styleClass="incrementButtons">
                                        <font>
                                           <Font size="20.0" />
-                                       </font></Button>
-                                    <Text fx:id="team1Text" fill="#3c4a6b" layoutX="155.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0">
+                                       </font>
+                                       <graphic>
+                                          <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@icons/minus.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                    </Button>
+                                    <Text fx:id="team1Text" fill="#3c4a6b" layoutX="155.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 20pt;">
                                        <font>
                                           <Font size="45.0" />
                                        </font>
@@ -84,50 +102,69 @@
                               </AnchorPane>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="292.0" prefWidth="450.0">
                                  <children>
-                                    <TextField fx:id="resultInputField2" alignment="CENTER" layoutX="25.0" layoutY="120.0" prefHeight="150.0" prefWidth="280.0" style="-fx-border-color: gray;">
+                                    <TextField fx:id="resultInputField2" alignment="CENTER" layoutX="25.0" layoutY="120.0" prefHeight="150.0" prefWidth="280.0" style="-fx-border-color: lightgray;" styleClass="resultInput">
                                        <font>
                                           <Font size="75.0" />
-                                       </font></TextField>
-                                    <Button layoutX="330.0" layoutY="140.0" mnemonicParsing="false" onAction="#incrementTeam2PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: green;" text="+1">
+                                       </font>
+                                    </TextField>
+                                    <Button layoutX="330.0" layoutY="140.0" mnemonicParsing="false" onAction="#incrementTeam2PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: green;" styleClass="incrementButtons">
                                        <font>
                                           <Font size="20.0" />
-                                       </font></Button>
-                                    <Button layoutX="330.0" layoutY="200.0" mnemonicParsing="false" onAction="#decrementTeam2PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: red;" text="-1">
+                                       </font>
+                                       <graphic>
+                                          <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@icons/plus.png" />
+                                             </image></ImageView>
+                                       </graphic>
+                                    </Button>
+                                    <Button layoutX="330.0" layoutY="200.0" mnemonicParsing="false" onAction="#decrementTeam2PointByOne" prefHeight="50.0" prefWidth="100.0" style="-fx-border-color: red;" styleClass="incrementButtons">
                                        <font>
                                           <Font size="20.0" />
-                                       </font></Button>
-                                    <Text fx:id="team2Text" fill="#3c4a6b" layoutX="155.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0">
+                                       </font>
+                                       <graphic>
+                                          <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@icons/minus.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                    </Button>
+                                    <Text fx:id="team2Text" fill="#3c4a6b" layoutX="155.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 20pt;">
                                        <font>
                                           <Font size="45.0" />
                                        </font>
                                     </Text>
                                  </children>
                               </AnchorPane>
-                          </items>
+                             </items>
                         </SplitPane>
-                     </children></AnchorPane>
-                <AnchorPane maxHeight="80.0" maxWidth="930.0" minHeight="0.0" minWidth="0.0" prefHeight="50.0" prefWidth="898.0">
+                     </children>
+                  </AnchorPane>
+                  <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Button defaultButton="true" layoutX="328.0" layoutY="12.0" mnemonicParsing="false" onAction="#confirmResultsAndGoBack" prefHeight="49.0" prefWidth="588.0" style="-fx-background-color: green; -fx-border-color: black;" text="Confirm Results" textFill="WHITE">
+                        <Pane prefHeight="90.0" prefWidth="92.0" />
+                        <Button mnemonicParsing="false" onAction="#returnToAdministrateTournament" prefHeight="69.0" prefWidth="300.0" style="-fx-background-color: #FF282D; -fx-border-color: black; -fx-text-fill: white; -fx-font-size: 20pt;" text="Cancel" textFill="WHITE">
                            <font>
                               <Font size="25.0" />
                            </font>
                            <effect>
-                              <InnerShadow />
+                              <DropShadow />
                            </effect>
                         </Button>
-                        <Button layoutX="11.0" layoutY="12.0" mnemonicParsing="false" onAction="#returnToAdministrateTournament" prefHeight="49.0" prefWidth="308.0" style="-fx-background-color: #FF282D; -fx-border-color: black;" text="Cancel" textFill="WHITE">
+                        <Pane layoutX="10.0" layoutY="10.0" prefHeight="90.0" prefWidth="130.0" />
+                        <Button defaultButton="true" mnemonicParsing="false" onAction="#confirmResultsAndGoBack" prefHeight="69.0" prefWidth="308.0" style="-fx-background-color: #03AC13; -fx-border-color: black; -fx-text-fill: White; -fx-font-size: 20pt;" text="Confirm Results" textFill="WHITE">
                            <font>
                               <Font size="25.0" />
                            </font>
                            <effect>
-                              <InnerShadow />
+                              <DropShadow />
                            </effect>
                         </Button>
                      </children>
-                  </AnchorPane>
-              </items>
-            </SplitPane>
+                  </HBox>
+               </children>
+            </VBox>
          </center>
         </BorderPane>
     </children>
