--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/HomePage.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/HomePage.fxml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960" prefHeight="540.0" prefWidth="960" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.HomePageController">
+<AnchorPane maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960" prefHeight="540.0" prefWidth="960" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.HomePageController">
    <children>
       <BorderPane layoutY="-2.0" prefHeight="544.0" prefWidth="962.0" stylesheets="@style.css">
          <top>
@@ -44,7 +51,7 @@
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Button layoutX="366.0" layoutY="274.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="229.0" text="Open tournament">
+                  <Button alignment="CENTER" layoutX="366.0" layoutY="274.0" mnemonicParsing="false" onAction="#OpenTournamentFromFile" prefHeight="60.0" prefWidth="229.0" text="Open tournament" textAlignment="CENTER">
                      <effect>
                         <InnerShadow />
                      </effect>
