Implemented manual save to AdministrateTournamentController

--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/AdministrateTournament.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/AdministrateTournament.fxml
@@ -78,6 +78,7 @@
                                   <items>
                                       <MenuItem mnemonicParsing="false" onAction="#openFile" text="Open" />
                               <MenuItem mnemonicParsing="false" onAction="#switchToHomePage" text="Close" />
+                              <MenuItem mnemonicParsing="false" onAction="#saveFile" text="Save as" />
                                   </items>
                               </Menu>
                               <Menu mnemonicParsing="false" text="Edit">
