--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/EnterResults.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/EnterResults.fxml
@@ -13,25 +13,7 @@
             <top>
                 <VBox prefHeight="27.0" prefWidth="960.0" BorderPane.alignment="CENTER">
                     <children>
-                        <MenuBar>
-                            <menus>
-                                <Menu mnemonicParsing="false" text="File">
-                                    <items>
-                                        <MenuItem mnemonicParsing="false" text="Close" />
-                                    </items>
-                                </Menu>
-                                <Menu mnemonicParsing="false" text="Edit">
-                                    <items>
-                                        <MenuItem mnemonicParsing="false" text="Delete" />
-                                    </items>
-                                </Menu>
-                                <Menu mnemonicParsing="false" text="Help">
-                                    <items>
-                                        <MenuItem mnemonicParsing="false" text="About" />
-                                    </items>
-                                </Menu>
-                            </menus>
-                        </MenuBar>
+                        <fx:include fx:id="topMenuBar" source="TopMenuBar.fxml"/>
                         <Pane prefHeight="26.0" prefWidth="960.0" />
                     </children>
                 </VBox>
