--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/HomePage.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/HomePage.fxml
@@ -18,25 +18,7 @@
          <top>
             <VBox prefHeight="13.0" prefWidth="962.0" BorderPane.alignment="CENTER">
                <children>
-                  <MenuBar prefHeight="25.0" prefWidth="950.0">
-                    <menus>
-                      <Menu mnemonicParsing="false" text="File">
-                        <items>
-                          <MenuItem mnemonicParsing="false" text="Close" />
-                        </items>
-                      </Menu>
-                      <Menu mnemonicParsing="false" text="Edit">
-                        <items>
-                          <MenuItem mnemonicParsing="false" text="Delete" />
-                        </items>
-                      </Menu>
-                      <Menu mnemonicParsing="false" text="Help">
-                        <items>
-                          <MenuItem mnemonicParsing="false" text="About" />
-                        </items>
-                      </Menu>
-                    </menus>
-                  </MenuBar>
+                   <fx:include fx:id="topMenuBar" source="TopMenuBar.fxml"/>
                </children>
             </VBox>
          </top>
