--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/DisplayMode.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/DisplayMode.fxml
@@ -40,7 +40,7 @@
                                         </ImageView>
                                     </graphic></Button>
                                 <Pane prefHeight="58.0" prefWidth="181.0" />
-                                <Text fill="#18205b" strokeType="OUTSIDE" strokeWidth="0.0" text="Tournament name" textAlignment="CENTER" wrappingWidth="387.61865234375">
+                                <Text fx:id="nameField" fill="#18205b" strokeType="OUTSIDE" strokeWidth="0.0" text="Tournament name" textAlignment="CENTER" wrappingWidth="387.61865234375">
                                     <font>
                                         <Font size="35.0" />
                                     </font>
