--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/CreateATournament.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/CreateATournament.fxml
@@ -45,13 +45,13 @@
                         <TextField fx:id="nameInputField" />
                         <Pane layoutX="10.0" layoutY="10.0" prefHeight="22.0" prefWidth="202.0" />
                         <Label layoutX="10.0" layoutY="48.0" text="Tournament Type" />
-                        <ChoiceBox fx:id="tournamentTypeInput" prefWidth="150.0" />
+                        <ChoiceBox fx:id="tournamentTypeInput" prefWidth="150.0" onAction="#tournamentTypeInputEvent"/>
                         <Pane layoutX="10.0" layoutY="92.0" prefHeight="22.0" prefWidth="202.0" />
                         <Label layoutX="10.0" layoutY="114.0" text="Teams Per Group" />
-                        <ChoiceBox fx:id="teamsPerGroupInput" prefHeight="31.0" prefWidth="95.0" />
+                        <ChoiceBox fx:id="teamsPerGroupInput" prefHeight="31.0" prefWidth="95.0" disable="true" />
                         <Pane layoutX="10.0" layoutY="157.0" prefHeight="22.0" prefWidth="202.0" />
                         <Label layoutX="10.0" layoutY="180.0" prefHeight="25.0" prefWidth="266.0" text="Teams Advancing From Each Group" />
-                        <ChoiceBox fx:id="teamsAdvancingFromGroupInput" prefHeight="31.0" prefWidth="93.0" />
+                        <ChoiceBox fx:id="teamsAdvancingFromGroupInput" prefHeight="31.0" prefWidth="93.0" disable="true" />
                         <Pane layoutX="10.0" layoutY="224.0" prefHeight="30.0" prefWidth="250.0" />
                         <Button mnemonicParsing="false" onAction="#cancelBackToHomePage" prefHeight="60.0" prefWidth="219.0" text="Cancel">
                            <effect>
