--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/EnterResults.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/EnterResults.fxml
@@ -13,7 +13,7 @@
             <top>
                 <VBox prefHeight="27.0" prefWidth="960.0" BorderPane.alignment="CENTER">
                     <children>
-                        <fx:include fx:id="topMenuBar" source="TopMenuBar.fxml"/>
+                        <fx:include fx:id="topMenuBar" source="TopMenuBar.fxml" />
                         <Pane prefHeight="26.0" prefWidth="960.0" />
                     </children>
                 </VBox>
@@ -24,13 +24,13 @@
                 <AnchorPane maxWidth="930.0" minHeight="0.0" minWidth="0.0" prefHeight="431.0" prefWidth="930.0" style="-fx-border-color: lightgray;">
                      <children>
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e4e4e480" height="88.0" layoutX="8.0" layoutY="308.0" stroke="#c3c1c1" strokeType="INSIDE" width="910.0" />
-                        <DatePicker fx:id="dateField" layoutX="33.0" layoutY="350.0" prefHeight="35.0" prefWidth="250.0" promptText="YYYY-MM-DD" />
+                        <DatePicker fx:id="dateField" layoutX="33.0" layoutY="350.0" prefHeight="35.0" prefWidth="250.0" promptText="MM/DD/YYYY" />
                         <Text fill="#5b5b5b" layoutX="138.0" layoutY="336.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date">
                            <font>
                               <Font size="20.0" />
                            </font>
                         </Text>
-                        <TextField fx:id="timeField" layoutX="341.0" layoutY="350.0" prefHeight="35.0" prefWidth="250.0" promptText="HH-MM-SS" />
+                        <TextField fx:id="timeField" layoutX="341.0" layoutY="350.0" prefHeight="35.0" prefWidth="250.0" promptText="HH-MM" />
                         <TextField fx:id="infoField" layoutX="649.0" layoutY="350.0" prefHeight="35.0" prefWidth="250.0" promptText="Information" />
                         <Text fill="#5b5b5b" layoutX="444.0" layoutY="337.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Time">
                            <font>
