--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/CreateATournament.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/CreateATournament.fxml
@@ -45,7 +45,7 @@
                         <TextField fx:id="nameInputField" />
                         <Pane layoutX="10.0" layoutY="10.0" prefHeight="22.0" prefWidth="202.0" />
                         <Label layoutX="10.0" layoutY="48.0" text="Tournament Type" />
-                        <ChoiceBox fx:id="tournamentTypeInput" prefWidth="150.0" onAction="#tournamentTypeInputEvent"/>
+                        <ChoiceBox fx:id="tournamentTypeInput" prefWidth="150.0"/>
                         <Pane layoutX="10.0" layoutY="92.0" prefHeight="22.0" prefWidth="202.0" />
                         <Label layoutX="10.0" layoutY="114.0" text="Teams Per Group" />
                         <ChoiceBox fx:id="teamsPerGroupInput" prefHeight="31.0" prefWidth="95.0" disable="true" />
