--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/BracketMatchBlock.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/BracketMatchBlock.fxml
@@ -12,7 +12,7 @@
 <HBox layoutX="10.0" layoutY="10.0" prefHeight="37.0" prefWidth="209.0"
       xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
-      fx:controller="edu.ntnu.idatt1002.k1g01.controller.BracketMatchBlockController">>
+      fx:controller="edu.ntnu.idatt1002.k1g01.controller.BracketMatchBlockController">
     <children>
         <VBox prefHeight="50.0" prefWidth="189.0" style="-fx-background-color: grey;">
             <children>
