Added view menu to TopMenuBar

--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/TopMenuBar.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/TopMenuBar.fxml
@@ -11,9 +11,10 @@
                 <MenuItem fx:id="topMenuBarSaveAs" mnemonicParsing="false" onAction="#saveFile" text="Save as" disable="true"/>
             </items>
         </Menu>
-        <Menu fx:id="topMenuBarEdit" mnemonicParsing="false" text="Edit" disable="true">
+        <Menu fx:id="topMenuBarView" mnemonicParsing="false" text="View" disable="true">
             <items>
-                <MenuItem mnemonicParsing="false" text="Delete" />
+                <MenuItem mnemonicParsing="false" onAction="#changeSceneToDisplayMode" text="Display" fx:id="topMenuBarDisplay"/>
+                <MenuItem mnemonicParsing="false" onAction="#changeSceneToAdministrateTournament" text="Administrate" fx:id="topMenuBarAdministrate"/>
             </items>
         </Menu>
         <Menu fx:id="topMenuBarHelp" mnemonicParsing="false" text="Help" disable="true">
