--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/AdministrateTournament.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/AdministrateTournament.fxml
@@ -35,7 +35,7 @@
                                   <TableView fx:id="matchTable" prefHeight="441.0" prefWidth="934.0">
                                       <columns>
                                           <TableColumn fx:id="teamsColumn" prefWidth="323.40002477169037" text="Teams" />
-                                          <TableColumn fx:id="resultColumn" minWidth="0.0" prefWidth="231.0" text="Result (HH-MM-SS-NN)" />
+                                          <TableColumn fx:id="resultColumn" minWidth="0.0" prefWidth="231.0" text="Result" />
                                           <TableColumn fx:id="dateColumn" minWidth="0.0" prefWidth="121.0" text="Date" />
                                           <TableColumn fx:id="timeColumn" minWidth="0.0" prefWidth="127.0" text="Time" />
                                           <TableColumn fx:id="infoColumn" minWidth="0.0" prefWidth="137.6000854492188" text="Info" />
@@ -53,35 +53,35 @@
             <VBox prefHeight="78.0" prefWidth="960.0" BorderPane.alignment="CENTER">
                <children>
                    <fx:include fx:id="topMenuBar" source="TopMenuBar.fxml" />
-                  <HBox prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Pane prefHeight="58.0" prefWidth="11.0" />
-                            <Button mnemonicParsing="false" prefHeight="58.0" prefWidth="88.0" style="-fx-background-color: lightgray; -fx-border-color: lightgray;">
-                             <graphic>
-                                 <ImageView fitHeight="50.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true">
-                                     <image>
-                                         <Image url="@icons/menu.png" />
-                                     </image>
-                                 </ImageView>
-                             </graphic></Button>
-                        <Pane prefHeight="200.0" prefWidth="200.0" />
-                              <Text fx:id="tournamentNameOutput" fill="#18205b" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="titles" text="Tournament name" textAlignment="CENTER" wrappingWidth="387.61865234375">
-                                  <font>
-                                      <Font size="35.0" />
-                                  </font>
-                              </Text>
-                        <Pane layoutX="90.0" layoutY="10.0" prefHeight="58.0" prefWidth="166.0" />
-                        <StackPane prefHeight="58.0" prefWidth="84.0">
-                           <children>
-                                  <TextField alignment="CENTER" prefHeight="31.0" prefWidth="91.0" text="10:09:35">
-                                      <font>
-                                          <Font size="15.0" />
-                                      </font>
-                                  </TextField>
-                           </children>
-                        </StackPane>
-                     </children>
-                  </HBox>
+                   <HBox prefHeight="100.0" prefWidth="200.0">
+                       <children>
+                           <Pane prefHeight="58.0" prefWidth="11.0" />
+                           <Button mnemonicParsing="false" prefHeight="58.0" prefWidth="88.0" style="-fx-background-color: lightgray; -fx-border-color: lightgray;">
+                               <graphic>
+                                   <ImageView fitHeight="50.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                           <Image url="@icons/menu.png" />
+                                       </image>
+                                   </ImageView>
+                               </graphic></Button>
+                           <Pane prefHeight="102.0" prefWidth="69.0" />
+                           <Text fx:id="tournamentNameOutput" fill="#18205b" strokeType="OUTSIDE" strokeWidth="0.0" text="Administrate Tournament name" textAlignment="CENTER" wrappingWidth="634.6186668872833">
+                               <font>
+                                   <Font size="35.0" />
+                               </font>
+                           </Text>
+                           <Pane layoutX="90.0" layoutY="10.0" prefHeight="102.0" prefWidth="58.0" />
+                           <StackPane prefHeight="58.0" prefWidth="84.0">
+                               <children>
+                                   <TextField alignment="CENTER" prefHeight="31.0" prefWidth="91.0" text="10:09:35">
+                                       <font>
+                                           <Font size="15.0" />
+                                       </font>
+                                   </TextField>
+                               </children>
+                           </StackPane>
+                       </children>
+                   </HBox>
                </children>
             </VBox>
          </top>
